[package]
name = "gsdmm_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gsdmm = { git = "https://github.com/rwalk/gsdmm-rust.git"}
serde = { version = "1", features = ["derive"] }
validator = { version = "0.12", features = ["derive"] }
actix-web = "4.0"
serde_json = "1.0"

